fix scrollbars showing for longer values

--- a/va-virkailija/web/va/hakemus-list/hakemus-listing.less
+++ b/va-virkailija/web/va/hakemus-list/hakemus-listing.less
@@ -101,7 +101,7 @@ table.hakemus-list {
     max-width: 100px;
   }
   .selvitys-value {
-    overflow-y: hidden;
+    overflow: hidden;
     text-overflow: ellipsis;
   }
 
